# TemplateVcpkg

./: .clang-format  .cmake-format.json  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: clang-format-check.yml
Playground/: CMakeLists.txt  main.cpp
Receiver/: CMakeLists.txt  ReceiverMain.cpp
Receiver/LIB/ReceiverLib/: CMakeLists.txt  Helper.hpp
Receiver/Test/: CMakeLists.txt  ExampleTest.cpp  ReceiverExampleTest.cpp  ReceiverMainTest.cpp
Sender/: CMakeLists.txt  SenderMain.cpp
Sender/LIB/SenderLib/: CMakeLists.txt
Sender/Test/: CMakeLists.txt  ExampleTest.cpp  SenderExampleTest.cpp  SenderMainTest.cpp
Shared/: CMakeLists.txt  README.md
Shared/SdCapnProtoLIB/SdCapnProto/: CMakeLists.txt  echo.capnp  stream.capnp
Shared/UtilitiesLIB/Utilities/: CMakeLists.txt  JsonSerializationHelpers.hpp  Sha256.cpp  Sha256.hpp  SpdlogInit.cpp  SpdlogInit.hpp  Utility.cpp  Utility.hpp  Utility.test.cpp
Shared/UtilitiesLIB/Utilities/Test/: CMakeLists.txt  Sha256.cpp  UtilitiesExampleTest.cpp  UtilitiesMainTest.cpp
Shared/cmake/: preproject.cmake  xpfunmac.cmake
SolutionName/: CMakeLists.txt  SolutionNameMain.cpp
SolutionName/LIB/SolutionNameLib/: CMakeLists.txt  Helper.test.cpp
SolutionName/Test/: CMakeLists.txt  ExampleTest.cpp  SolutionNameExampleTest.cpp  SolutionNameMainTest.cpp
cmake/: xpfunmac.cmake
